WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266537
[IFC][Bidi] Empty inline box does not generate valid geometry
https://bugs.webkit.org/show_bug.cgi?id=266537
Summary
[IFC][Bidi] Empty inline box does not generate valid geometry
alan
Reported
2023-12-16 06:53:16 PST
debug assert only.
Attachments
Test reduction
(204 bytes, text/html)
2023-12-16 06:53 PST
,
alan
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-12-16 06:53:48 PST
Created
attachment 469088
[details]
Test reduction
Radar WebKit Bug Importer
Comment 2
2023-12-23 06:54:13 PST
<
rdar://problem/120070749
>
Vitaly Dyackhov
Comment 3
2024-09-23 07:37:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34087
EWS
Comment 4
2024-09-27 18:23:15 PDT
Committed
284402@main
(8581b67df6d8): <
https://commits.webkit.org/284402@main
> Reviewed commits have been landed. Closing PR #34087 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug