[IFC][Bidi] Empty inline box does not generate valid geometry https://bugs.webkit.org/show_bug.cgi?id=266537

Reviewed by Alan Baradlay.

An inline box containing only a float should not be considered as contentful.

* LayoutTests/TestExpectations:
* LayoutTests/css3/unicode-bidi-float-crash.html: Added.
* LayoutTests/platform/glib/css3/unicode-bidi-float-crash-expected.txt: Added.
* LayoutTests/platform/ios/css3/unicode-bidi-float-crash-expected.txt: Added.
* LayoutTests/platform/mac/css3/unicode-bidi-float-crash-expected.txt: Added.
* LayoutTests/platform/win/css3/unicode-bidi-float-crash-expected.txt: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::InlineItemsBuilder::breakAndComputeBidiLevels):

Canonical link: https://commits.webkit.org/284402@main